--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ RPi.GPIO
 adafruit-circuitpython-mcp9808
 adafruit-circuitpython-busdevice
 adafruit-blinka
-astral
+astral~=2.2
 sun
-schedule
+schedule~=0.6.0
+
+relay~=0.0.8
