--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 RPi.GPIO
-Adafruit_DHT
-astral
+adafruit-circuitpython-mcp9808
+adafruit-circuitpython-busdevice
+adafruit-blinka
+astral~=2.2
 sun
-schedule
+schedule~=0.6.0
+relay~=0.0.8
+pymysql
