--- a/logging.conf
+++ b/logging.conf
@@ -2,26 +2,29 @@
 keys=root,habitatLogDebug
 
 [handlers]
-keys=consoleHandler
+keys=timedRotatingFileHandler
 
 [formatters]
 keys=simpleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
+handlers=timedRotatingFileHandler
 
 [logger_habitatLogDebug]
 level=DEBUG
-handlers=consoleHandler
+handlers=timedRotatingFileHandler
 qualname=habitatLogDebug
 propagate=0
 
-[handler_consoleHandler]
-class=StreamHandler
-level=DEBUG
+[handler_timedRotatingFileHandler]
+class=logging.handlers.TimedRotatingFileHandler
+interval=midnight
+backupCount=3
 formatter=simpleFormatter
-args=(sys.stdout,)
+level=DEBUG
+args=('logfile.log',)
+
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
