trying to fix the logger

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,habitatLogDebug
+keys=root,main,mapSun,mySql,relay,temperature
 
 [handlers]
 keys=timedRotatingFileHandler
@@ -11,10 +11,34 @@ keys=simpleFormatter
 level=DEBUG
 handlers=timedRotatingFileHandler
 
-[logger_habitatLogDebug]
+[logger_main]
 level=DEBUG
 handlers=timedRotatingFileHandler
-qualname=habitatLogDebug
+qualname=main
+propagate=0
+
+[logger_mapSun]
+level=DEBUG
+handlers=timedRotatingFileHandler
+qualname=mapSun
+propagate=0
+
+[logger_mySql]
+level=DEBUG
+handlers=timedRotatingFileHandler
+qualname=mySql
+propagate=0
+
+[logger_relay]
+level=DEBUG
+handlers=timedRotatingFileHandler
+qualname=relay
+propagate=0
+
+[logger_temperature]
+level=DEBUG
+handlers=timedRotatingFileHandler
+qualname=temperature
 propagate=0
 
 [handler_timedRotatingFileHandler]
