changed to ERROR

--- a/logging.conf
+++ b/logging.conf
@@ -8,35 +8,35 @@ keys=timedRotatingFileHandler
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
+level=ERROR
 handlers=timedRotatingFileHandler
 
 [logger_main]
-level=DEBUG
+level=ERROR
 handlers=timedRotatingFileHandler
 qualname=main
 propagate=0
 
 [logger_mapSun]
-level=DEBUG
+level=ERROR
 handlers=timedRotatingFileHandler
 qualname=mapSun
 propagate=0
 
 [logger_mySql]
-level=DEBUG
+level=ERROR
 handlers=timedRotatingFileHandler
 qualname=mySql
 propagate=0
 
 [logger_relay]
-level=DEBUG
+level=ERROR
 handlers=timedRotatingFileHandler
 qualname=relay
 propagate=0
 
 [logger_temperature]
-level=DEBUG
+level=ERROR
 handlers=timedRotatingFileHandler
 qualname=temperature
 propagate=0
@@ -46,7 +46,7 @@ class=logging.handlers.TimedRotatingFileHandler
 interval=midnight
 backupCount=3
 formatter=simpleFormatter
-level=DEBUG
+level=ERROR
 args=('logfile.log',)
 
 
