--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [mysql]
-host = "localhost"
-user = "grafanauser"
-password = "grafanauserPW"
-database = "habitatHistoryDB"
+host=localhost
+user=grafanauser
+password=grafanauserPW
+database=habitatHistoryDB
