Externalized location configurations to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,10 @@
+[location]
+city=Clayton
+state=North Carolina
+timezone=US/Eastern
+latitude=35.650711
+longitude=-78.4563914
+
 [mysql]
 host=localhost
 user=grafanauser
