--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,6 @@ sonar.projectKey=habitatController
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# Python version
+sonar.python.version=3
