Corrected duplication in the files and cleaned it up a bit

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 # must be unique in a given SonarQube instance
 sonar.projectKey=habitatController
 
@@ -15,4 +16,5 @@ sonar.projectKey=habitatController
 #sonar.sourceEncoding=UTF-8
 
 # Python version
+# suppress inspection "UnusedProperty"
 sonar.python.version=3
