updated sun mapping due to update

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,11 @@
 [location]
-city=Clayton
+name=Clayton
 state=North Carolina
+region=USA
 timezone=US/Eastern
-latitude=35.650711
-longitude=-78.4563914
+latitude=35.673731
+longitude=-78.472620
+
 
 [mysql]
 host=localhost
