--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,20 +1,23 @@
 # suppress inspection "UnusedProperty" for whole file
 # must be unique in a given SonarQube instance
-sonar.projectKey=habitatController
+sonar.projectKey=your_project_key
 
 # --- optional properties ---
 
 # defaults to project key
-#sonar.projectName=Habitat Controller
+sonar.projectName=Your Project Name
 # defaults to 'not provided'
-#sonar.projectVersion=1.0
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
 # Python version
 # suppress inspection "UnusedProperty"
 sonar.python.version=3
+
+# Python coverage report path
+sonar.python.coverage.reportPaths=coverage.xml
