chore: update location details in config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [location]
-name=Clayton
+name=Four Oaks
 state=North Carolina
 region=USA
 timezone=US/Eastern
-latitude=35.673731
-longitude=-78.472620
+latitude=35.408893
+longitude=-78.463572
 
 [mysql]
 host=localhost
